--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="version" content="1.0.0">
+    <meta name="version" content="1.0.1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    
     <title>Pokemon</title>
+
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v=1.0.1" />
+
+    <script defer src="game.js?v=1.0.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
 </head>
 
@@ -34,8 +38,6 @@
             <button id="right" class="arrow-button">→</button>
         </div>
     </div>
-    
-    <script defer src="game.js"></script>
 </body>
 
 </html>
