--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="version" content="1.0.1">
+    <meta name="version" content="1.0.2">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    
+
     <title>Pokemon</title>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="style.css?v=1.0.1" />
+    <link rel="stylesheet" href="style.css?v=1.0.2" />
 
-    <script defer src="game.js?v=1.0.1"></script>
+    <script defer src="game.js?v=1.0.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
 </head>
 
@@ -20,8 +20,8 @@
 
     <!-- Pokemon Catch Popup -->
     <div id="pokemon-popup" class="popup">
-        <div class="popup-content">
-            <h2>A wild Pokemon appeared!</h2>
+        <div id="popup-content" class="popup-content">
+            <h2 id="popup-title">A wild Pokemon appeared!</h2>
             <img id="pokemon-sprite" src="assets/pokemon/0.png" alt="Pokemon Sprite">
             <div class="popup-buttons">
                 <button id="catch-btn">Catch</button>
